--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elevator.js",
   "version": "1.0.0",
   "description": "Elevator.js fixes those awkward \"scroll to top\" moments the old fashioned way.",
-  "main": "elevator.js",
+  "main": "elevator.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
