--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "elevator.js",
   "version": "1.0.0",
   "description": "Elevator.js fixes those awkward \"scroll to top\" moments the old fashioned way.",
-  "main": "elevator.min.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [
+    "scroll",
+    "top",
+    "elevator"
+  ],
+  "homepage": "http://tholman.com/elevator.js",
+  "bugs": {
+    "url": "https://github.com/tholman/elevator.js/issues"
   },
+  "license": "MIT",
+  "author": "Tim Holman <timothy.w.holman@gmail.com> (http://tholman.com)",
+  "main": "elevator.min.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tholman/elevator.js.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tholman/elevator.js/issues"
-  },
-  "homepage": "https://github.com/tholman/elevator.js#readme"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
